--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@
   position: relative;
   top: 350px;
   right: 0;
-  animation: fail 5s linear infinite;
+  animation: fail 4s linear infinite;
 }
 
 @keyframes fail{
@@ -68,13 +68,16 @@
 @keyframes jump{
   0%{
     top: 300px;
+    transform: rotate(-20deg);
   }
  
   15%{
-    top: 220px;
+    top: 210px;
+    transform: rotate(-10deg);
   }
-  255%{
-    top: 260px;
+  55%{
+    top: 250px;
+    transform: rotate(10deg);
   }
   100%{
     top: 300px;
